--- a/cbn-confirm-delete.html
+++ b/cbn-confirm-delete.html
@@ -34,11 +34,11 @@
 				{{_mesajOnDelete}}
 			</div>
 			<div class="modal-buttons">
-				<paper-button dialog-dismiss class="icon-btn grey" >
+				<paper-button dialog-dismiss class="icon-btn background grey" >
 					<iron-icon icon="close" class="icon-btn-icon"></iron-icon>
 					<span class="icon-btn-text">Anuleaza</span>
 				</paper-button>
-				<paper-button class="icon-btn red" on-tap="confirmDelete">
+				<paper-button class="icon-btn background red" on-tap="confirmDelete">
 					<iron-icon icon="delete" class="icon-btn-icon"></iron-icon>
 					<span class="icon-btn-text">Sterge</span>
 				</paper-button>
